# intel

./: .gitignore  migrate_data.py  package-lock.json  pyproject.toml
client/: index.html  package-lock.json  package.json  vite.config.mjs
client/src/: App.jsx  index.jsx
client/src/api/: axiosConfig.jsx
client/src/apps/core/: AppCore.jsx
client/src/apps/core/pages/: AboutPlatform.jsx  Home.jsx  Login.jsx  ThemeSandbox.jsx  VersionPlatform.jsx
client/src/apps/core/pages/Contact/: ContactLanding.jsx
client/src/apps/core/pages/DataUpload/: DataUploadPage.jsx
client/src/apps/core/pages/Projects/: ActivitySummary.css  ActivitySummary.jsx  CombinedTracker.jsx  ContactList.css  ContactList.jsx  CorpGovTracker.jsx  HelpRequestForm.jsx  ProjectList.jsx  ProjectTracker.jsx  ProjectsLanding.jsx  ResourceTracker.jsx
client/src/apps/core/pages/ServiceRequest/: AboutServiceRequest.jsx  LandingServiceRequest.jsx  RequestList.jsx  SubmitIdeaForm.jsx  TrackProgress.jsx  (+1 more)
client/src/apps/lighthouse/: AppLighthouse.jsx  LighthouseTheme.css  Login.js
client/src/apps/lighthouse/pages/: CompareTracker.jsx  LighthouseShowcase.jsx  ModernTracker.jsx
client/src/components/: Accordion.jsx  DynamicSidebar.jsx  InfoBlock.jsx  KpiBox.jsx  PageTemplate.jsx  Placeholder.jsx  UserSwitcher.jsx
client/src/context/: AuthContext.jsx
server/: main.py  recreate_contacts.py
server/data/: 02 Contact Directory.xlsx  Corp Governance Data.xlsx  Director_Lookup.xlsx  Governance Delivery Tool.csv  contacts.csv  fintag_tracker.csv  projects.csv
server/services/: data_loader.py  router.py
(+19 files in other folders)
